--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,7 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          - macos-10.15
-          # - windows-2019
+          - windows-2019
         compiler:
           # you can specify the version after `-` like "llvm-13.0.0".
           - llvm-13.0.0
