--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,7 +139,7 @@ jobs:
 
       - name: Publish Tagged Release
         uses: softprops/action-gh-release@v1
-        #if: startsWith(github.ref, 'refs/tags/') && matrix.package_generator != ''
+        if: ${{startsWith(github.ref, 'refs/tags/') && matrix.package_generator != ''}}
         with:
           files: |
             build/*-*${{ matrix.build_type }}*-*.*
