--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,8 +166,17 @@ endif()
 # Experience shows that explicit package naming can help make it easier to sort
 # out potential ABI related issues before they start, while helping you
 # track a build to a specific GIT SHA
-set(CPACK_PACKAGE_FILE_NAME
-    "${CMAKE_PROJECT_NAME}-${CMAKE_PROJECT_VERSION}-${GIT_SHORT_SHA}-${CMAKE_SYSTEM_NAME}-${CMAKE_BUILD_TYPE}-${CMAKE_CXX_COMPILER_ID}-${CMAKE_CXX_COMPILER_VERSION}"
-)
+#set(CPACK_PACKAGE_FILE_NAME
+#    "${CMAKE_PROJECT_NAME}-${CMAKE_PROJECT_VERSION}-${GIT_SHORT_SHA}-${CMAKE_SYSTEM_NAME}-${CMAKE_BUILD_TYPE}-${CMAKE_CXX_COMPILER_ID}-${CMAKE_CXX_COMPILER_VERSION}"
+#)
 
+include(InstallRequiredSystemLibraries)
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+set(CPACK_PACKAGE_VERSION_MAJOR ${CMAKE_MAJOR_VERSION})
+set(CPACK_PACKAGE_VERSION_MINOR ${CMAKE_MINOR_VERSION})
+set(CPACK_PACKAGE_PROJECT_NAME lowpassfilter)
+set(CPACK_PACKAGE_NAME hello_package)
+set(CPACK_PACKAGE_VERSION 0.0.0)
+set(CPACK_PACKAGE_DIRECTORY ./)
+set(CPACK_PACKAGE_VENDER oxford)
 include(CPack)
