--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           - windows-2019
         compiler:
           # you can specify the version after `-` like "llvm-13.0.0".
-#          - llvm-13.0.0
+          - llvm-13.0.0
           - gcc-11
         generator:
           - "Ninja Multi-Config"
@@ -139,7 +139,7 @@ jobs:
 
       - name: Publish Tagged Release
         uses: softprops/action-gh-release@v1
-        if: ${{startsWith(github.ref, 'refs/tags/') && matrix.package_generator != ''}}
+        #if: startsWith(github.ref, 'refs/tags/') && matrix.package_generator != ''
         with:
           files: |
             build/*-*${{ matrix.build_type }}*-*.*
