--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,9 @@ jobs:
           - "Ninja Multi-Config"
         build_type:
           - Release
-          - Debug
+#          - Debug
         developer_mode:
-          - ON
+#          - ON
           - OFF
 
         exclude:
@@ -59,9 +59,14 @@ jobs:
 #            gcov_executable: "llvm-cov gcov"
 
           # Set up preferred package generators, for given build configurations
-          - build_type: Release
+          - os: ubuntu-20.04
+            build_type: Release
             developer_mode: OFF
-            package_generator: TBZ2
+            package_generator: RPM
+          - os: windows-2019
+            build_type: Release
+            developer_mode: OFF
+            package_generator: WIX
 
           # This exists solely to make sure a non-multiconfig build works
 #          - os: ubuntu-20.04
