--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,32 @@ jobs:
 #            generator: "Unix Makefiles"
 #            build_type: Debug
 #            gcov_executable: gcov
+#            developer_mode: ON# Windows msvc builds
+
+#          - os: windows-2019
+#            compiler: msvc
+#            generator: "Visual Studio 16 2019"
+#            build_type: Debug
 #            developer_mode: On
+#
+#          - os: windows-2019
+#            compiler: msvc
+#            generator: "Visual Studio 16 2019"
+#            build_type: Release
+#            developer_mode: ON
+#
+#          - os: windows-2019
+#            compiler: msvc
+#            generator: "Visual Studio 16 2019"
+#            build_type: Debug
+#            developer_mode: OFF
+
+          - os: windows-2019
+            compiler: msvc
+            generator: "Visual Studio 16 2019"
+            build_type: Release
+            developer_mode: OFF
+            package_generator: WIX
 
     steps:
       - uses: actions/checkout@v2
