--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,5 @@ target_link_libraries(
   PRIVATE CLI11::CLI11 fmt::fmt spdlog::spdlog)
 
 target_include_directories(intro PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
+
+install(TARGETS intro)
