--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,6 @@ set(CPACK_PACKAGE_VERSION_MINOR ${CMAKE_MINOR_VERSION})
 set(CPACK_PACKAGE_PROJECT_NAME lowpassfilter)
 set(CPACK_PACKAGE_NAME hello_package)
 set(CPACK_PACKAGE_VERSION 0.0.0)
-set(CPACK_PACKAGE_DIRECTORY ./)
+set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR})
 set(CPACK_PACKAGE_VENDER oxford)
 include(CPack)
