--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,10 @@ jobs:
           # you can specify the version after `-` like "llvm-13.0.0".
 #          - llvm-13.0.0
           - gcc-11
+          - msvc
         generator:
           - "Ninja Multi-Config"
+          - "Visual Studio 16 2019"
         build_type:
           - Release
 #          - Debug
@@ -49,6 +51,12 @@ jobs:
           # mingw is determined by this author to be too buggy to support
           - os: windows-2019
             compiler: gcc-11
+          - os: windows-2019
+            compiler: llvm-13.0.0
+          - os: ubuntu-20.04
+            compiler: msvc
+          - os: ubuntu-20.04
+            generator: "Visual Studio 16 2019"
 
         include:
           # Add appropriate variables for gcov version required. This will intentionally break
@@ -93,13 +101,6 @@ jobs:
 #            generator: "Visual Studio 16 2019"
 #            build_type: Debug
 #            developer_mode: OFF
-
-          - os: windows-2019
-            compiler: msvc
-            generator: "Visual Studio 16 2019"
-            build_type: Release
-            developer_mode: OFF
-            package_generator: WIX
 
     steps:
       - uses: actions/checkout@v2
@@ -172,8 +173,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') && matrix.package_generator != ''
         with:
           files: |
-            build/*-*${{ matrix.build_type }}*-*.*
-
+            ./*.msi
+            ./*.deb
+            ./*.rpm
 
       - name: Publish to codecov
         uses: codecov/codecov-action@v2
