--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,10 @@ jobs:
             build_type: Release
             developer_mode: OFF
             package_generator: RPM
+          - os: ubuntu-20.04
+            build_type: Release
+            developer_mode: OFF
+            package_generator: DEB
           - os: windows-2019
             build_type: Release
             developer_mode: OFF
