--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,24 @@ endif()
 #    "${CMAKE_PROJECT_NAME}-${CMAKE_PROJECT_VERSION}-${GIT_SHORT_SHA}-${CMAKE_SYSTEM_NAME}-${CMAKE_BUILD_TYPE}-${CMAKE_CXX_COMPILER_ID}-${CMAKE_CXX_COMPILER_VERSION}"
 #)
 
+if (NOT UNIX)
+  option(LINUX OFF)
+  set(LINUX_DEFINE false)
+elseif (UNIX AND NOT APPLE)
+  option(LINUX ON)
+  set(LINUX_DEFINE true)
+  if (USE_TBB)
+    list(APPEND LINUX_LIBS TBB::tbb)
+  endif ()
+endif ()
+
+if (WIN32)
+  option(WIN ON)
+  set(WIN_DEFINE true)
+else ()
+  set(WIN_DEFINE false)
+endif ()
+
 include(InstallRequiredSystemLibraries)
 set(CPACK_PACKAGE_VERSION_MAJOR ${CMAKE_MAJOR_VERSION})
 set(CPACK_PACKAGE_VERSION_MINOR ${CMAKE_MINOR_VERSION})
@@ -178,4 +196,16 @@ set(CPACK_PACKAGE_NAME hello_package)
 set(CPACK_PACKAGE_VERSION 0.0.0)
 set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR})
 set(CPACK_PACKAGE_VENDER oxford)
+set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_SYSTEM_NAME})
+set(CPACK_THREADS 0)
+set(CPACK_PACKAGE_EXECUTABLES intro;hello_package)
+
+set(CPACK_NSIS_UNINSTALL_NAME uninstall_hello_package)
+if (WIN)
+  set(CPACK_GENERATOR WIX NSIS)
+else ()
+  set(CPACK_GENERATOR RPM DEB)
+endif ()
+
+
 include(CPack)
